--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@supabase/supabase-js": "^2.53.0",
+    "mapbox-gl": "^3.14.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-map-gl": "^6.1.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
