--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mapbox-gl": "^3.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-map-gl": "^6.1.20"
+    "react-map-gl": "^6.1.20",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
